--- a/css/styles.css
+++ b/css/styles.css
@@ -1,228 +1,315 @@
-:root{
-        --primary-text-color: #2E2F42;
-        --action-color: #404BBF;
-        --primary-bg-color: #ffffff;
-        --secondary-bg-color: ##F4F4FD;
-        --hero-color: ##2E2F42;
+:root {
+  --primary-text-color: #2e2f42;
+  --action-color: #404bbf;
+  --primary-bg-color: #ffffff;
+  --secondary-bg-color: ##f4f4fd;
+  --hero-color: ##2e2f42;
 }
 
-
-body{
-    font-family: 'Roboto';
+body {
+  font-family: "Roboto";
 }
 
 .link {
-     text-decoration: none;
- }
-.list{
-    list-style: none;
+  text-decoration: none;
+}
+.list {
+  list-style: none;
 }
 .header {
-    background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
-.header-navigation {}
+.header-navigation {
+}
 
 .header-logo {
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.33;
-    text-transform: uppercase;
-    color: var(--primary-text-color)}
-
-.logo-blue {
-        font-family: 'Raleway';
-        font-weight: 800;
-        font-size: 18px;
-        line-height: 1.33;;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: #4D5AE5;
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.33;
+  text-transform: uppercase;
+  color: var(--primary-text-color);
 }
 
-.header-list {}
+.logo-blue {
+  font-family: "Raleway";
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.33;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
 
-.header-item {}
+.header-list {
+}
+
+.header-item {
+}
 
 .header-link {
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: var(--primary-text-color)
-        }
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
 
-.header-link:hover,.header-link:focus{   
-        color: var(--action-color);
+.header-link:hover,
+.header-link:focus {
+  color: var(--action-color);
 }
 
 .header-email {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;    
-        color: #434455;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
-.header-email:hover,.header-email:focus{
-        color: var(--action-color);
+.header-email:hover,
+.header-email:focus {
+  color: var(--action-color);
 }
 
 .header-tel {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;}
-    
-    /* hero */
-        .hero {
-            var:var(--hero-color) ;
-        }
-    
-        .hero-title {
-            font-weight: 700;
-            font-size: 56px;
-            line-height: 1.07;        
-            text-align: center;
-            letter-spacing: 0.02em;
-             color: white
-        ;}
-            
-    
-        .hero-button {width: 169px;
-            height: 56px;
-            left: 636px;
-            top: 428px;
-            background: #4D5AE5;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-            border-radius: 4px;
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 1.5;
-            letter-spacing: 0.04em;
-            color: #FFFFFF;
-            cursor: pointer;}
-            
-            
-            
-            
-        .hero-button:hover,.hero-button:focus{
-         background-color:var(--action-color);
-                 }
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+/* hero */
+.hero {
+  var: var(--hero-color);
+}
+
+.hero-title {
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: white;
+}
+
+.hero-button {
+  width: 169px;
+  height: 56px;
+  left: 636px;
+  top: 428px;
+  background: #4d5ae5;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.hero-button:hover,
+.hero-button:focus {
+  background-color: var(--action-color);
+}
 
 /* advantages section */
-.advantage {}
+.advantage {
+}
 
-.advantage-title {}
+.advantage-title {
+}
 
-.advantage-list {}
+.advantage-list {
+}
 
-.advantage-item {}
+.advantage-item {
+}
 
 .advantage-item-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: var(--primary-text-color)
-    }
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
 
 .advantage-paragraph {
-    font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #434455;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 
 /* what we are doing/ our services */
-.services {}
+.services {
+}
 
 .services-title {
-            font-weight: 700;
-            font-size: 36px;
-            line-height: 1.11;
-            text-align: center;
-            letter-spacing: 0.02em;
-            text-transform: capitalize;    
-        color: var(--primary-text-color)
-        }
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--primary-text-color);
+}
 
-.services-list {}
+.services-list {
+}
 
-.services-item {}
-.services-pic {}
+.services-item {
+}
+.services-pic {
+}
 
 /* team */
 
 .team {
-    background-color: #F4F4FD;
+  background-color: #f4f4fd;
 }
 
 .team-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: var(--primary-text-color)
-    }
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--primary-text-color);
+}
 
-.team-list {}
+.team-list {
+}
 
 .team-item {
-    background-color: #FFFFFF;
-    width: 264px;
-        height: 380px;
-        left: 1020px;
-        top: 1780px;box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-            border-radius: 0px 0px 4px 4px;}
-
-.team-image {}
-
-.team-name{
-    font-weight: 500;
-        font-size: 20px;
-        line-height: 1.2;
-        text-align: center;
-        letter-spacing: 0.02em;   
-        color: var(--primary-text-color)
-
+  background-color: #ffffff;
+  width: 264px;
+  height: 380px;
+  left: 1020px;
+  top: 1780px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 }
-.team-position{
-    font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        text-align: center;
-        letter-spacing: 0.02em;    
-        color: #434455;
 
+.team-image {
+}
+
+.team-name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
+.team-position {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 /* footer */
-footer{
-    width: 1440px;
-    height: 310px;
-    left: 0px;       
-     top: 2280px;    
-     background: #2E2F42;
+footer {
+  width: 1440px;
+  height: 310px;
+  left: 0px;
+  top: 2280px;
+  background: #2e2f42;
 }
-.footer-logo{
-    font-weight: 800;
-        font-size: 18px;
-        line-height: 1.16;
-        align-items: center;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: #F4F4FD;
+.footer-logo {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.16;
+  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #f4f4fd;
 }
-.footer-paragraph{
-    font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #E7E9FC;
+.footer-paragraph {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #e7e9fc;
+}
+
+/* portfolio */
+
+.projects {
+  background-color: var(--primary-bg-color);
+}
+
+.projects-title {
+}
+
+.projects-list {
+}
+
+.projects-item {
+}
+
+.projects-button {
+  width: 116px;
+  height: 48px;
+  background: #f4f4fd;
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #4d5ae5;
+  cursor: pointer;
+}
+.projects-button:hover,
+.projects-button:focus {
+  background: #404bbf;
+  color: #ffffff;
+}
+
+/* наши работы */
+.jobs {
+}
+
+.jobs-title {
+}
+
+.jobs-list {
+}
+
+.jobs-item {
+}
+
+.jobs-link {
+}
+
+.jobs-pic {
+}
+
+.jobs-aftertitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.jobs-paragraph {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
