--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,12 @@
   --primary-text-color: #2e2f42;
   --action-color: #404bbf;
   --primary-bg-color: #ffffff;
-  --secondary-bg-color: ##f4f4fd;
+  --secondary-bg-color: #f4f4fd;
   --hero-color: #2e2f42;
 }
 
 body {
-  font-family: "Roboto";
+  font-family: "Roboto" sans-serif;
 }
 
 .link {
@@ -17,7 +17,7 @@ body {
   list-style: none;
 }
 .header {
-  background-color: #ffffff;
+  background-color: var(--primary-bg-color)
 }
 
 .header-navigation {
@@ -63,7 +63,8 @@ body {
 }
 
 .header-email {
-  font-weight: 400;
+  font-style: normal;
+ 
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -76,7 +77,7 @@ body {
 
 .header-tel {
   font-style: normal;
-  font-weight: 400;
+  
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -85,7 +86,7 @@ body {
 
 /* hero */
 .hero {
-  background-color: var(--hero-color);
+background-color:var(--hero-color);
 }
 
 .hero-title {
@@ -123,7 +124,7 @@ body {
 }
 
 .advantage-title {
-  display: none;
+    display: none;
 }
 
 .advantage-list {
@@ -141,7 +142,7 @@ body {
 }
 
 .advantage-paragraph {
-  font-weight: 400;
+  
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -173,7 +174,7 @@ body {
 /* team */
 
 .team {
-  background-color: #f4f4fd;
+  background-color: var(--secondary-bg-color)
 }
 
 .team-title {
@@ -190,7 +191,7 @@ body {
 }
 
 .team-item {
-  background-color: #ffffff;
+  background-color: var(--primary-bg-color);
   width: 264px;
   height: 380px;
   left: 1020px;
@@ -212,7 +213,7 @@ body {
   color: var(--primary-text-color);
 }
 .team-position {
-  font-weight: 400;
+  
   font-size: 16px;
   line-height: 1.5;
   text-align: center;
@@ -225,7 +226,7 @@ footer {
   height: 310px;
   left: 0px;
   top: 2280px;
-  background: #2e2f42;
+  background: var(--hero-color)
 }
 .footer-logo {
   font-weight: 800;
@@ -237,7 +238,7 @@ footer {
   color: #f4f4fd;
 }
 .footer-paragraph {
-  font-weight: 400;
+  
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -251,7 +252,7 @@ footer {
 }
 
 .projects-title {
-  display: none;
+    display: none;
 }
 
 .projects-list {
@@ -286,7 +287,7 @@ footer {
 }
 
 .jobs-title {
-  display: none;
+    display: none;
 }
 
 .jobs-list {
@@ -310,7 +311,6 @@ footer {
 }
 
 .jobs-paragraph {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
